# webanki

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRD.md  README.md  docker-compose.yml
ai-service/: Dockerfile  README.md  main.py  requirements.txt
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_init.sql  003_card_managed_and_links.sql  2_add_media.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/routes/: auth.rs  cards.rs  decks.rs  export.rs  import.rs  media.rs  mod.rs  stats.rs  study.rs
backend/tests/: integration_test.rs
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DeckSelect.tsx  EditDeckModal.tsx  Layout.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  MediaRenderer.tsx  MediaUpload.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CardEdit.tsx  CardNew.tsx  CardView.tsx  DeckDetail.tsx  Decks.tsx  Import.tsx  Login.tsx  Plan.tsx  Register.tsx  Stats.tsx  Study.tsx
scripts/: smoke_test.sh
